# ai-interview-assistant

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  pipeline.rs  setup.rs
src/ai/: embedder.rs  llm.rs  mod.rs  prompt.rs  rag.rs  setup.rs  vector_store.rs
src/audio/: hotkey.rs  mod.rs  normalizer.rs  pipeline.rs  resampler.rs  vad.rs  wasapi.rs  wav_writer.rs
src/stt/: deepgram.rs  mod.rs
src/ui/: mod.rs
