[package]
name = "ai-interview-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["full"] }
wasapi = "0.22"
hound = "3.5"
ringbuf = "0.4"
rubato = "0.16"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_Input_KeyboardAndMouse",
] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util      = "0.3"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"